--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
 
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/DEMOS
+
+spring.datasource.username=mory
+spring.datasource.password=Aa2875633245.0
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.hikari.maximum-pool-size=10
