--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <scope>compile</scope>
         </dependency>
 
+<!--        类型装换-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version> <!-- 请根据最新版本更新 -->
+        </dependency>
+
     </dependencies>
 
     <build>
