--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,12 @@
             <artifactId>HikariCP</artifactId>
             <version>4.0.3</version> <!-- 根据实际情况选择版本 -->
         </dependency>
-
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+            <version>1.35.0.RC</version>
+        </dependency>
 
 
         <!--		优化版本mybatis，更适合中国宝宝体质-->
