--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,17 @@ sa-token:
 
 spring:
 
+  #Redis框架配置
+  redis:
+    host: 127.0.0.1  # Redis服务器主机名
+    port: 6379       # Redis服务器端口
+    lettuce:
+        pool:
+          max-idle: 50             # 最大空闲连接数
+          max-total: 100           # 最大连接数
+          max-wait: 20000          # 最大等待时间，单位毫秒
+          max-active: 200          # 最大连接数
+
   #jackson日期时间格式设置
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
